# win_io

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  appveyor.yml  build.cmd  cmake_utils.cmake  vcpkg.json
src/: CMakeLists.txt  SenderReceiver_IOCP_Sockets.cpp
src/examples/: CMakeLists.txt
src/examples/async_TCP_IOCP_senders_receivers/: CMakeLists.txt  SenderReceiver_IOCP_Sockets.cpp  tcp_echo_server.py  tpc_server.py
src/examples/async_tcp_echo_client/: CMakeLists.txt  main.cpp
src/examples/async_tcp_echo_server/: CMakeLists.txt  main.cpp
src/examples/async_udp_echo_client/: CMakeLists.txt  main.cpp
src/examples/async_udp_echo_server/: CMakeLists.txt  main.cpp
src/examples/fs_changes_action/: CMakeLists.txt  main.cpp
src/examples/fs_changes_print/: CMakeLists.txt  main.cpp
src/examples/unifex_TCP_connect/: CMakeLists.txt  main.cpp
src/examples/unifex_TCP_simple_echo/: CMakeLists.txt  main.cpp  tcp_echo_client.py
src/fs_changes_print/: CMakeLists.txt  main.cpp
src/rxcpp_fs_changes/: CMakeLists.txt  main.cpp
src/test_win_io/: CMakeLists.txt  file_utils.h  test_io_completion_port.cpp  test_last_error_utils.cpp  test_read_directory_changes.cpp
src/test_win_io_coro/: CMakeLists.txt  main.cpp  test_io_coro_scheduler.cpp  test_queue.cpp
src/tests/: CMakeLists.txt
src/tests/test_win_io/: CMakeLists.txt  example.cpp  file_utils.h  test_io_completion_port.cpp  test_last_error_utils.cpp  test_read_directory_changes.cpp
src/tests/test_win_io_coro/: CMakeLists.txt  main.cpp  test_io_coro_scheduler.cpp  test_queue.cpp
src/unifex_TCP_connect/: CMakeLists.txt  main.cpp
src/unifex_TCP_simple_echo/: CMakeLists.txt  main.cpp  tcp_echo_client.py  tcp_echo_server.py
src/unifex_tcp_echo_client/: CMakeLists.txt  main.cpp
src/unifex_tcp_echo_server/: CMakeLists.txt  main.cpp
src/unifex_udp_echo_client/: CMakeLists.txt  main.cpp
src/unifex_udp_echo_server/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt
src/utils/fs_changes_action/: CMakeLists.txt  main.cpp
src/utils/fs_changes_print/: CMakeLists.txt  main.cpp
src/utils/print_changes/: CMakeLists.txt  main.cpp
src/win_io/: CMakeLists.txt
src/win_io/include/win_io/: errors.h  example.h  io_completion_port.h
src/win_io/include/win_io/detail/: cpp17_integration.h  directory_changes_range.h  io_completion_port.h  io_completion_port_data.h  io_completion_port_errors.h  last_error_utils.h  read_directory_changes.h  read_directory_changes_errors.h  win_types.h
src/win_io/src/: directory_changes_range.cpp  example.cpp  io_completion_port.cpp  io_completion_port_stub.cpp  last_error_utils.cpp  read_directory_changes.cpp  read_directory_changes_stub.cpp  win_types.cpp
src/win_io_coro/: CMakeLists.txt
src/win_io_coro/include/win_io_coro/: coro_async_file.h  io_coro_scheduler.h  io_task.h
src/win_io_coro/include/win_io_coro/detail/: intrusive_queue.h  queue.h
src/win_io_coro/src/: io_coro_scheduler.cpp  io_task.cpp
src/win_socks/: CMakeLists.txt
src/win_socks/include/: unifex_IOCP_sockets.hpp
tools/: generate_project.py
tools/cmake/: utils.cmake
