
add_subdirectory(fs_changes_print)
add_subdirectory(fs_changes_action)
add_subdirectory(unifex_TCP_connect)
add_subdirectory(unifex_TCP_simple_echo)
add_subdirectory(async_tcp_echo_server)
add_subdirectory(async_tcp_echo_client)
if (TARGET fs_changes_print)
    set_target_properties(fs_changes_print PROPERTIES FOLDER examples)
endif()
if (TARGET fs_changes_action)
    set_target_properties(fs_changes_action PROPERTIES FOLDER examples)
endif()
if (TARGET unifex_TCP_connect)
    set_target_properties(unifex_TCP_connect PROPERTIES FOLDER examples)
endif()
if (TARGET unifex_TCP_simple_echo)
    set_target_properties(unifex_TCP_simple_echo PROPERTIES FOLDER examples)
endif()
if (TARGET async_tcp_echo_server)
    set_target_properties(async_tcp_echo_server PROPERTIES FOLDER examples)
endif()
if (TARGET async_tcp_echo_client)
    set_target_properties(async_tcp_echo_client PROPERTIES FOLDER examples)
endif()
